# reqt

./: Cargo.toml  README.md
.cargo/: config.toml
.github/: copilot-instructions.md
.github/workflows/: ci-main.yaml  ci.yml
authorization-derive/: Cargo.toml
authorization-derive/src/: lib.rs
filter-derive/: Cargo.toml
filter-derive/src/: lib.rs
pagination-derive/: Cargo.toml
pagination-derive/src/: lib.rs
proc-macro-api-manager/: Cargo.toml
proc-macro-api-manager/src/: lib.rs
proc-macro-authorization/: Cargo.toml
proc-macro-authorization/src/: lib.rs
range-derive/: Cargo.toml
range-derive/src/: lib.rs
sort-derive/: Cargo.toml
sort-derive/src/: lib.rs
src/: connector.rs  connector_builder.rs  error.rs  filter.rs  lib.rs  pagination.rs  prelude.rs  query.rs  range.rs  rate_limiter.rs  request.rs  request_builder.rs  request_url.rs  sort.rs  test.rs
tests/: connector.rs  request.rs
