workspace = { members = [
    "authorization-derive",
    "filter-derive",
    "pagination-derive",
    "range-derive",
    "sort-derive",
] }
[package]
name = "reqt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.5", features = ["json"] }
tokio = { version = "1.38.0", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "2.0.3"
strum = { version = "0.27.1", features = ["derive"] }
url = "2.5.2"
base64 = "0.22.1"
chrono = "0.4.19"
log = "0.4.22"
authorization-derive = { path = "./authorization-derive" }
pagination-derive = { path = "./pagination-derive" }
filter-derive = { path = "./filter-derive" }
sort-derive = { path = "./sort-derive" }
range-derive = { path = "./range-derive" }

[dev-dependencies]
serial_test = "3.1.1"
httpmock = "0.7.0"
fake = { version = "3.0.1", features = ["derive"] }
