workspace = { members = [
    "authorization-derive",
    "filter-derive",
    "pagination-derive",
    "range-derive",
    "sort-derive",
] }

[package]
name = "reqt"
version = "0.1.0"
edition = "2024"
description = "An HTTP request manager, providing high level features to connect to a web API and handle requests."
license-file = "NOTICE"
documentation = "https://kellnr.ryse.ovh/reqt"
homepage = "https://kellnr.ryse.ovh/reqt"
repository = "https://github.com/ryse-rs/reqt"
publish = ["kellnr"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.22", features = ["json"] }
tokio = { version = "1.47.0", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
thiserror = "2.0.12"
strum = { version = "0.26.3", features = ["derive"] }
url = "2.5.4"
base64 = "0.22.1"
chrono = "0.4.41"
log = "0.4.27"
authorization-derive = { path = "./authorization-derive" }
pagination-derive = { path = "./pagination-derive" }
filter-derive = { path = "./filter-derive" }
sort-derive = { path = "./sort-derive" }
range-derive = { path = "./range-derive" }

[dev-dependencies]
serial_test = "3.2.0"
httpmock = "0.7.0"
fake = { version = "3.1.0", features = ["derive"] }
