workspace = { members = [
    "authorization-derive",
    "filter-derive",
    "pagination-derive",
    "range-derive",
    "sort-derive",
] }

[package]
name = "reqt"
version = "1.0.0"
edition = "2024"
authors = ["ZialeHub", "gpoblon"]
description = "An HTTP request manager, providing high level features to connect to a web API and handle requests."
license-file = "LICENSE"
homepage = "https://github.com/ZialeHub/reqt"
repository = "https://github.com/ZialeHub/reqt"
readme = "README.md"
keywords = ["http", "request", "api", "client", "rest", "pagination", "filtering", "sorting"]

[dependencies]
reqwest = { version = "0.12.24", features = ["json"] }
tokio = { version = "1.48.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
thiserror = "2.0.17"
strum = { version = "0.27.2", features = ["derive"] }
url = "2.5.7"
base64 = "0.22.1"
chrono = "0.4.42"
log = "0.4.28"
authorization-derive = { path = "./authorization-derive" }
pagination-derive = { path = "./pagination-derive" }
filter-derive = { path = "./filter-derive" }
sort-derive = { path = "./sort-derive" }
range-derive = { path = "./range-derive" }

[dev-dependencies]
serial_test = "3.2.0"
httpmock = "0.8.2"
fake = { version = "4.4.0", features = ["derive"] }
