[package]
name = "sort-derive"
version = "0.1.0"
edition = "2021"
license-file = "LICENSE"
description = "ProcMacro used by Reqt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
quote = "1.0.42"
syn = { version = "2.0.110", features = ["full", "derive", "extra-traits", "printing"] }
